Fixed build issue by upgrading dependencies

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "clsx": "^2.1.1",
+    "core-js": "^3.41.0",
     "framer-motion": "^12.3.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.3.0",
