--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "json-loader": "^0.5.7",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
